--- a/analiseficha.html
+++ b/analiseficha.html
@@ -410,37 +410,58 @@ button{
 </div>
 
 <script>
-/* ================= SUPABASE ================= */
+/* =====================================================
+   SUPABASE
+===================================================== */
 const sb = supabase.createClient(
   "https://dxkszikemntfusfyrzos.supabase.co",
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
+/* =====================================================
+   UTIL
+===================================================== */
 const moeda = v =>
   "R$ " + Number(v || 0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
-/* ================= STATE ================= */
+/* =====================================================
+   STATE
+===================================================== */
 let pratos = [];
 let ingredientesBase = [];
 let impostosCache = [];
+let pratoAtual = null;
 
-/* ================= LOAD BASE ================= */
+/* =====================================================
+   LOAD BASE
+===================================================== */
 async function carregarIngredientesBase(){
-  const { data, error } = await sb.from("produtos").select("*").order("nome");
+  const { data, error } = await sb
+    .from("produtos")
+    .select("*")
+    .order("nome");
+
   if(error) return alert("Erro ingredientes");
   ingredientesBase = data;
 }
 
 async function carregarPratos(){
-  const { data, error } = await sb.from("buffet").select("*").order("created_at",{ascending:false});
+  const { data, error } = await sb
+    .from("buffet")
+    .select("*")
+    .order("created_at",{ascending:false});
+
   if(error) return alert("Erro pratos");
   pratos = data;
   renderLista();
 }
 
-/* ================= FILTROS ================= */
+/* =====================================================
+   FILTROS
+===================================================== */
 function renderLista(){
   cards.innerHTML = "";
+
   const nome = filtroNome.value.toUpperCase();
   const tipo = filtroTipo.value;
 
@@ -452,11 +473,13 @@ function renderLista(){
     .forEach(renderCard);
 }
 
-/* ================= CARD ================= */
+/* =====================================================
+   CARD
+===================================================== */
 function renderCard(p){
   const c = document.createElement("div");
   c.className = "card";
-  c.onclick = () => abrir(p);
+  c.onclick = () => abrirModal(p);
 
   c.innerHTML = `
     ${p.foto_url ? `<img src="${p.foto_url}">` : ``}
@@ -470,121 +493,153 @@ function renderCard(p){
   cards.appendChild(c);
 }
 
-/* ================= MODAL ================= */
-async function abrir(p){
+/* =====================================================
+   MODAL PRINCIPAL
+===================================================== */
+async function abrirModal(p){
+  pratoAtual = p;
   modal.style.display = "flex";
   document.body.style.overflow = "hidden";
   mFoto.src = p.foto_url || "";
 
-  const { data: itens } = await sb.from("buffet_itens").select("*").eq("buffet_id", p.id);
-  const cmv = itens.reduce((s,i)=>s + Number(i.custo_calculado||0),0);
+  /* INGREDIENTES */
+  const { data: itens } = await sb
+    .from("buffet_itens")
+    .select("*")
+    .eq("buffet_id", p.id);
 
-  const { data: impostos } = await sb.from("impostos").select("*").eq("buffet_id", p.id);
+  const cmvBase = itens.reduce(
+    (s,i)=>s + Number(i.custo_calculado||0),0
+  );
+
+  /* IMPOSTOS */
+  const { data: impostos } = await sb
+    .from("impostos")
+    .select("*")
+    .eq("buffet_id", p.id);
+
   impostosCache = impostos || [];
 
   let totalImpostos = 0;
   impostosCache.forEach(i=>{
     if(i.modalidade==="FIXO") totalImpostos += Number(i.valor);
-    if(i.modalidade==="PERCENTUAL") totalImpostos += (cmv * Number(i.valor))/100;
+    if(i.modalidade==="PERCENTUAL") totalImpostos += (cmvBase * Number(i.valor))/100;
   });
 
-  const cmvFinal = cmv + totalImpostos;
+  const cmvFinal = cmvBase + totalImpostos;
   const precoVenda = Number(p.preco_venda||0);
   const lucro = precoVenda ? precoVenda - cmvFinal : 0;
   const margem = precoVenda ? (lucro/precoVenda)*100 : 0;
 
+  /* UI */
   mBody.innerHTML = `
     <h2>${p.nome}</h2>
 
-    ${precoVenda ? `<p><b>Preço:</b> ${moeda(precoVenda)}</p>` : ``}
-    <p><b>CMV:</b> ${moeda(cmv)}</p>
-    <p><b>Impostos:</b> ${moeda(totalImpostos)}</p>
+    <div class="precificacao">
+      <p><b>CMV base:</b> ${moeda(cmvBase)}</p>
+      <p><b>Impostos / Custos:</b> ${moeda(totalImpostos)}</p>
+      <p><b>CMV final:</b> ${moeda(cmvFinal)}</p>
+    </div>
 
     <hr>
-    <h3>Precificação</h3>
 
-    <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
-      <input id="markupPerc" type="number" placeholder="Markup %">
+    <h3>Precificação</h3>
+    <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px">
+      <input id="markupPerc" type="number" placeholder="Markup (%)">
       <input id="precoSugerido" readonly placeholder="Preço sugerido">
     </div>
 
-    <button class="btn-add" style="margin-top:10px"
-      onclick="salvarPrecoVenda('${p.id}', ${cmvFinal})">
-      SALVAR PREÇO
+    <button class="btn-add" style="margin-top:12px"
+      onclick="salvarPrecoVenda(${cmvFinal})">
+      SALVAR PREÇO DE VENDA
     </button>
 
     ${precoVenda ? `
+      <p><b>Preço atual:</b> ${moeda(precoVenda)}</p>
       <p><b>Lucro:</b> ${moeda(lucro)}</p>
       <p><b>Margem:</b> ${margem.toFixed(2)}%</p>
-    ` : `<p style="color:red">Preço não definido</p>`}
+    ` : `<p style="color:#dc2626;font-weight:700">Preço não cadastrado</p>`}
 
     <hr>
-    <h3>Ingredientes</h3>
 
+    <h3>Ingredientes</h3>
     ${itens.map(i=>`
       <div class="ing">
-        <span><b>${i.nome}</b><br><small>${i.quantidade} ${i.unidade_uso}</small></span>
+        <span>
+          <b>${i.nome}</b><br>
+          <small>${i.quantidade} ${i.unidade_uso}</small>
+        </span>
         <strong>${moeda(i.custo_calculado)}</strong>
         <div>
-          <button class="btn-icon btn-edit" onclick="editarIngrediente('${i.id}','${p.id}')">✏️</button>
-          <button class="btn-icon btn-delete" onclick="excluirIngrediente('${i.id}','${p.id}')">🗑️</button>
+          <button class="btn-icon btn-delete"
+            onclick="excluirIngrediente('${i.id}')">🗑️</button>
         </div>
       </div>
     `).join("")}
 
-    <hr>
-    <h3>Novo Ingrediente</h3>
+    <div class="precificacao">
+      <h3>Novo ingrediente</h3>
 
-    <select id="ingProduto">
-      <option value="">Selecione</option>
-      ${ingredientesBase.map(i=>`
-        <option value="${i.id}" data-unidade="${i.unidade_padrao}">
-          ${i.nome}
-        </option>
-      `).join("")}
-    </select>
+      <select id="ingProduto">
+        <option value="">Selecione</option>
+        ${ingredientesBase.map(i=>`
+          <option value="${i.id}" data-unidade="${i.unidade_padrao}">
+            ${i.nome}
+          </option>
+        `).join("")}
+      </select>
 
-    <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px">
-      <input id="ingQtd" type="number" step="0.001" placeholder="Qtd">
-      <input id="ingUnidade" readonly>
+      <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px">
+        <input id="ingQtd" type="number" step="0.001" placeholder="Quantidade">
+        <input id="ingUnidade" readonly placeholder="Unidade">
+      </div>
+
+      <button class="btn-add" style="margin-top:10px"
+        onclick="salvarIngrediente()">
+        ADICIONAR INGREDIENTE
+      </button>
     </div>
-
-    <button id="btnIngrediente" class="btn-add"
-      onclick="salvarIngrediente('${p.id}')">
-      SALVAR INGREDIENTE
-    </button>
   `;
 
+  /* AUTO MARKUP */
   setTimeout(()=>{
-    const mk = document.getElementById("markupPerc");
-    const pr = document.getElementById("precoSugerido");
-    mk.oninput = ()=>{
-      pr.value = moeda(cmvFinal * (1 + Number(mk.value||0)/100));
+    markupPerc.oninput = ()=>{
+      const mk = Number(markupPerc.value||0);
+      precoSugerido.value = moeda(cmvFinal * (1 + mk/100));
     };
   },50);
 }
 
-/* ================= PREÇO ================= */
-async function salvarPrecoVenda(buffetId, cmvFinal){
+/* =====================================================
+   PREÇO DE VENDA
+===================================================== */
+async function salvarPrecoVenda(cmvFinal){
   const mk = Number(markupPerc.value||0);
-  if(mk<=0) return alert("Markup inválido");
+  if(mk<=0) return alert("Informe o markup");
 
   const preco = cmvFinal * (1 + mk/100);
 
-  await sb.from("buffet").update({preco_venda:preco}).eq("id",buffetId);
+  await sb
+    .from("buffet")
+    .update({ preco_venda: preco })
+    .eq("id", pratoAtual.id);
+
   await carregarPratos();
-  abrir(pratos.find(p=>p.id===buffetId));
+  abrirModal(pratos.find(p=>p.id===pratoAtual.id));
 }
 
-/* ================= INGREDIENTES ================= */
-async function salvarIngrediente(buffetId){
+/* =====================================================
+   INGREDIENTES
+===================================================== */
+async function salvarIngrediente(){
   const prodId = ingProduto.value;
   const qtd = Number(ingQtd.value||0);
-  if(!prodId||qtd<=0) return;
+  if(!prodId || qtd<=0) return;
 
   const prod = ingredientesBase.find(p=>p.id===prodId);
+
   await sb.from("buffet_itens").insert({
-    buffet_id: buffetId,
+    buffet_id: pratoAtual.id,
     produto_id: prod.id,
     nome: prod.nome,
     quantidade: qtd,
@@ -593,27 +648,25 @@ async function salvarIngrediente(buffetId){
     custo_calculado: prod.custo_unitario * qtd
   });
 
-  abrir(pratos.find(p=>p.id===buffetId));
+  abrirModal(pratoAtual);
 }
 
-async function editarIngrediente(id,buffetId){
-  const {data} = await sb.from("buffet_itens").select("*").eq("id",id).single();
-  ingProduto.value = data.produto_id;
-  ingQtd.value = data.quantidade;
-}
-
-async function excluirIngrediente(id,buffetId){
+async function excluirIngrediente(id){
   await sb.from("buffet_itens").delete().eq("id",id);
-  abrir(pratos.find(p=>p.id===buffetId));
+  abrirModal(pratoAtual);
 }
 
-/* ================= INIT ================= */
+/* =====================================================
+   INIT
+===================================================== */
 (async ()=>{
   await carregarIngredientesBase();
   await carregarPratos();
 })();
 
-/* ================= UNIDADE AUTO ================= */
+/* =====================================================
+   AUTO UNIDADE
+===================================================== */
 document.addEventListener("change",e=>{
   if(e.target.id==="ingProduto"){
     const opt = e.target.selectedOptions[0];
